Fixed issue where background image gets cut off

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,7 +31,6 @@ body, html {
     background-size: 100%;
     display: flex;
     flex-flow: column;
-    height: 100%;
 }
 
 .forecast {
